pkglib_LTLIBRARIES = libAhadicTools.la

SVNTAG = AHADIC++/Tools
include ../../svn.make

libAhadicTools_la_SOURCES = \
                            SVN_Info.C \
			    Cluster.C \
                            Constituents.C \
                            Hadron_Wave_Function.C \
                            Hadron_Multiplet.C \
                            Transitions.C \
			    Dipole_Splitter.C \
			    Splitting_Functions.C \
			    Splitting_Tools.C \
			    Dipole.C \
			    Soft_Cluster_Handler.C \
			    Hadron_Init.C \
                            Hadronisation_Parameters.C

localincdir = $(pkgincludedir)/AHADIC++/Tools

localinc_HEADERS   = \
		     Cluster.H \
                     Constituents.H \
		     Dipole_Splitter.H \
		     Splitting_Functions.H \
		     Splitting_Tools.H \
		     Dipole.H \
                     Hadron_Wave_Function.H \
                     Hadron_Multiplet.H \
                     Transitions.H \
		     Soft_Cluster_Handler.H \
		     Hadron_Init.H \
                     Hadronisation_Parameters.H

EXTRA_DIST    = @SVNINCLUDE@
